Wed Jul 02 11:53:48 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Fix for issue #21:
	  "SearchConnection._get_prefix_from_term fails when terms contain
	  numbers", as supplied by Shane Evans.

Wed Jul 02 11:53:07 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/facet_hierarchy_1.py: Add regression test for
	  issue #21: "SearchConnection._get_prefix_from_term fails when
	  terms contain numbers".

Wed Jul 02 11:00:09 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* setup.py,test.py,xappy/test.py: Move test.py to top level, for
	  easier running.

Thu Jun 26 12:18:02 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* docs/queries.rst: Further documentation on how to use queries.

Thu Jun 26 10:44:09 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/query.py: Add Query.empty(), with the same semantics as
	  xapian.Query.empty().

Thu Jun 26 06:38:13 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* docs/queries.rst: Add new document describing how to use Query
	  objects.  Some FIXMEs in sections which are still to be written.
	* xappy/test.py: Add some useful symbols to the namespace in which
	  tests are run.  Test weighting.rst and queries.rst
	* build.py: Build queries.html
	* docs/introduction.rst: Change some examples to use the new method
	  of combining queries.

Thu Jun 26 06:35:18 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/query.py: Add methods to get the maximum possible weight,
	  normalise the weight of a Query, and to perform a search, to
	  Query().
	* xappy/searchconnection.py: Supply self to newly constructed
	  Query() objects so they can keep track of the connection.  Allow
	  weight_params to be specified to get_max_possible_weight(), so
	  that the return value is compatible with that.

Wed Jun 25 21:32:30 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
