@@ -40,21 +40,21 @@ import urllib2
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-10521.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-10817.tgz',
      'xapian-core.tgz',
-     '31d4379b6ecee5cdafb94cfe38d7c19e9acdbef5',
+     '29c79389605748901f4be721169335c286da4524',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-10521.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-10817.tgz',
      'xapian-bindings.tgz',
-     '3708103de8a2cdcd9316c4e8dd19ffa77860407f',
+     '990948589823f70a1549b122fe4e2cd72f15b169',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-10521.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-10817.tgz',
      'win32msvc.tgz',
-     'b1380cc8486b24a93ed83fe066eaa0189ef6a87b',
+     'fbb5c30b7639b6a214cdcc21fde2bf826313df5e',
      'xapian-core/win32',
     ),
 )
