@@ -35,10 +35,10 @@
 #
 #  $xappylibdir: a checkout of xappy/trunk.
 
-rev="1.0.6"
-matchspy_branchpoint="10520"
-opsynonym_branchpoint="10698"
-clustering_branchpoint="10615"
+rev="1.0.7"
+matchspy_branchpoint="10811"
+opsynonym_branchpoint="10811"
+clustering_branchpoint="10811"
 basedir="$HOME/private/Working/xapian/pristine/"
 xappylibdir="$HOME/xappy/libs/"
 
