@@ -1,3 +1,9 @@
+Fri Jul 04 17:10:46 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* libs/get_xapian.py,utils/make_xappy_tarballs: Point to updated
+	  tarballs, which fix an assertion failure in some situations, and
+	  update version numbers in tarball generation script accordingly.
+
 Wed Jul 02 11:53:48 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: Fix for issue #21:
